# alphashared

./: README.md
.github/actions/code-review-action/: action.yml  code_review.py
.github/actions/hello-world-action/: action.yml
.github/actions/hello_world/: action.yml
.github/scripts/: check_artifact_exists.sh  get_artifact_name.sh  test_app.sh  test_package.sh
.github/workflows/: README.md  _create_artifact.yml  _create_installer.yml  alphatesting.yml  bump_version.yml  code_review.yml  create_release.yml  publish_docker.yml  publish_on_pypi.yml  update_requirements.yml
actions/apply-code-review/: action.yml  apply_code_review.py
actions/code-review/: README.md  action.yml  apply_code_review.py  code_review_bot.py  pr_to_string.py
actions/get-code-review-input/: README.md  action.yml  files_to_string.py  pr_to_string.py
alphatesting/: Dockerfile  README.md  get_ref.sh  pip.conf  replace_alphax.sh
apply-code-review/: action.yml  apply_code_review.py
code-review-action/: action.yml  code_review.py
get-code-review-input/: action.yml
templates/basic/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
templates/basic/.github/workflow/: branch-checks.yaml
templates/basic/my_package/: my_module.py
templates/basic/nbs/: my_notebook.ipynb  my_notebook.py  utils.py
templates/basic/requirements/: requirements.txt  requirements_development.txt
templates/basic/src/: hello_world.py
templates/basic/test/: test_hello_world.py
templates/basic/tests/: test_my_module.py
templates/data_analysis/: LICENSE  README.md
templates/data_analysis/config/: README.md
update_requirements/: Dockerfile  README.md
